// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircleLoader9 Loader should render image avatar properly 1`] = `
<div>
  <div
    class="sc-gsTCUz jVwPke"
  >
    <div
      class="sc-bdfBwQ dqCOSp"
    />
  </div>
</div>
`;

exports[`CircleLoader9 Loader should render with all the props given 1`] = `
<div>
  <div
    class="sc-gsTCUz itwfOQ"
  >
    <div
      class="sc-bdfBwQ kDXqDg"
    />
  </div>
</div>
`;

exports[`CircleLoader9 Loader should render with default theme 1`] = `
<div>
  <div
    class="sc-gsTCUz FEXmB"
  >
    <div
      class="sc-bdfBwQ dqCOSp"
    />
  </div>
</div>
`;
